--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@
 }
 
 #pixel-board{
-    width: 212px;
-    height: 227px;
-    box-sizing: border-box;
+    width: 220px;
+    height: 233px;
+    background-color: orchid;
 }
 
 .pixel {
@@ -18,5 +18,6 @@
     height: 40px;
     border: 1px solid black;
     display: inline-block;
-    margin-bottom: -5px;
+    margin-top: 1px;    
+    background-color: white;
 }
