O requisito 4 foi completo porem de forma erronea apenas o criei para verificar como deve ser o for para roda-lo de forma dinamica

--- a/style.css
+++ b/style.css
@@ -26,3 +26,11 @@ div{
     background-color: black;
 }
 
+.pixel{
+    background-color: white;
+    width: 40px;
+    height: 40px;
+    border: solid;
+    border-color: black;
+    border-width: 1px;
+}
