--- a/style.css
+++ b/style.css
@@ -1,28 +1,28 @@
 #color-palette {
-    display: flex;
+  display: flex;
 }
 
 .color {
-    border: 1px solid black;
-    width: 50px;
-    height: 50px;
+  border: 1px solid black;
+  width: 50px;
+  height: 50px;
 }
 
 #black {
-    background-color: black;
+  background-color: black;
 }
 
 .pixel {
-    border: 1px solid black;
-    background-color: white;
-    width: 40px;
-    height: 40px;
-    padding: 0;
-    margin: 0;
-    border-collapse: collapse;
-    border-spacing: 0px
+  border: 1px solid black;
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  margin: 0;
+  border-collapse: collapse;
+  border-spacing: 0;
 }
 
 table {
-    border-collapse: collapse;
+  border-collapse: collapse;
 }
