--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
 #title {
-  text-align: center;
-  color: coral;
+  color: #454545;
+}
+
+#color-palette {
+  display: flex;
+}
+
+.color {
+    background-color: crimson;
+    border: 1px solid black;
+    width: 50px;
+    height: 50px;
+    margin: 5px;
 }
