--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@
   height: 40px;
   padding: 0;
   margin: 0;
-  border-collapse: collapse;
   border-spacing: 0;
 }
 
 table {
   border-collapse: collapse;
+  border-spacing: 0;
 }
