--- a/style.css
+++ b/style.css
@@ -13,16 +13,18 @@
 
 #pixel-board {
 
-  width: 200px;
-  height: 200px;
-  margin-top: 30px;
+  width: 210px;
+  height: 210px;
+  margin-top: 20px;
+  background-color: white;
+
 }
 
 .pixel {
   border: 1px solid black;
   display: inline-block;
-  width: 38px;
-  height: 38px;
-  background-color: rgb (255, 255, 255);
+  width: 40px;
+  height: 40px;
+  background-color: white;
 
 }
