--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@
 .pixel {
   padding: 50px; 
   display: table-cell;
-  background-color: brown;
+  border: 5px solid black;
+
 }
 .divH {
   padding: 50px;
