--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@
 .pixel {
   padding: 50px; 
   display: table-cell;
-  border: 5px solid black;
+  border: 1px solid black;
+  background-color: white;
 
 }
 .divH {
