--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@ body {
 }
 
 #table {
-  display: table;
   width: 210px;
   /* margin: auto; */
 }
@@ -20,7 +19,7 @@ body {
 }
 
 .tr {
-  display: table-row;
+  display: table;
 }
 
 .td {
@@ -31,9 +30,11 @@ body {
 }
 
 .line{
-  border: 1px solid black;
-  display: inline-block;
 }
 .pixel {
-  background-color: white;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  border-spacing: 0;
+  padding: 0;
 }
