--- a/style.css
+++ b/style.css
@@ -5,19 +5,19 @@
   display: inline-block;
 }
 
-#preto {
+#black {
   background-color: black;
 }
 
-#vermelho {
+#red {
   background-color: red;
 }
 
-#azul {
+#blue {
   background-color: blue;
 }
 
-#verde {
+#green {
   background-color: green;
 }
 
