--- a/style.css
+++ b/style.css
@@ -1,19 +1,38 @@
-h1 {
-    text-align: center;
-    color:blue;
-  }
-  
-  .color {
-    border: 1px solid black;
-    height: 40px;
-    width: 40px;
+.color {
     display: inline-block;
-    margin: 5px;
+    border-style: solid;
+    border-width: 1px;
+    width: 40px;
+    height: 40px;
   }
   
+  .display-table {
+    display: table;
+  }
+  .display-table > div { 
+    display: table-row; 
+  }
+  .display-table > div > div { 
+    display: table-cell;
+    padding: 5px;
+  }
   .pixel {
-    border: 1px solid black;
-    height: 40px;
-    width: 40px;
-    background-color: white;
+    display: inline-block;
+    border-style: solid;
+    border-width: 1px;
+  
+  }
+  .line {
+    margin:0;
+    padding: 0;
+  }
+  #form{
+    display: inline-block;
+  }
+  #clear-board {
+    display: inline-block;
+    padding: 10px;
+    margin: 10px;
+    border-style: solid;
+    border-width: 1px;
   }
