--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 
 #black {
   background-color: black;
-  border: 1px solid black;
   width: 50px;
   height: 50px;
   margin-left: 10px;
@@ -20,7 +19,6 @@
 
 #blue {
   background-color: blue;
-  border: 1px solid black;
   width: 50px;
   height: 50px;
   margin-left: 10px;
@@ -29,7 +27,6 @@
 
 #orangered {
   background-color: orangered;
-  border: 1px solid black;
   width: 50px;
   height: 50px;
   margin-left: 10px;
@@ -38,7 +35,6 @@
 
 #green {
   background-color: green;
-  border: 1px solid black;
   width: 50px;
   height: 50px;
   margin-left: 10px;
@@ -64,4 +60,12 @@
   display: table-cell;
   border: 1px solid black;
   background-color: rgb(255, 255, 255);
+}
+
+.color {
+  border: 1px solid black;
+}
+
+.selected {
+  border: 1px solid red;
 }
