--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
 td {
     border: 1px solid black;
-    padding: 0px;
-    margin: 0px;
     width: 40px;
-    height: 40px;
-    
+    height: 40px;  
+}
+
+#color-palette table {
+    border-color: black 
+}
+
+#pixel-board table {
+   border-color: black;
+   border-collapse: collapse;
 }
 
 #title {
