--- a/style.css
+++ b/style.css
@@ -1,6 +1,14 @@
 .color {
   display: inline-block;
   border: 1px solid black;
+  width: 50px;
+  height: 50px;
+  margin: 10px;
+}
+
+
+.pixel {
+  border: 1px solid black;
   width: 25px;
   height: 25px;
 }
