organizei duas tabelas na estrutura html

--- a/style.css
+++ b/style.css
@@ -1,16 +1,10 @@
-.color{
+.color {
     border-style:solid;
     border-width: 1px;
-    
-}
-div{
-    margin:12px ;
-    display: inline-table;
-    border-style: solid;
     width: 40px;
     height: 40px;
-    position: static;
-    
+    margin:12px
+        
 }
 
 #vermelho{
