--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-#title {
-
-}
-.color-palette {
-
-}
-
 .color {
 	border: solid;
 	border-width: 1px;
@@ -29,3 +22,11 @@
 #yellow {
   background-color: yellow;
 }
+
+#pixel-board .pixel {
+	width: 60px;
+	height: 60px;
+	border: black solid 1px;
+	display: inline-block;
+}
+
