Preenchendo requisitos 1~5 pt.2

--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@
   height: 40px;
   width: 40px;
   display: inline-block;
-  padding: 0px;
-  margin: 0px;
+  background-color: white;
 }
 
 #pixel-board {
