--- a/style.css
+++ b/style.css
@@ -57,15 +57,17 @@ section #verde {
 }
 
 table {
-  pad: 2px;
-  background-color: grey;
+  padding: 2px;
+  background-color: rgb(51, 212, 11);
   text-align: center;
-  display: inline-block;
+  margin-left: 41%;
+  margin-top: 30px;
 }
 
-table .pixel {
+table td{
   background-color: white;
   width: 40px;
   height: 40px;
-  padding: 5;
+  border: solid 1px black;
+  text-align: center;
 }
