comentarios no css

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
   background-color: black;
 }
 
+/* foi colocaro 41px pois o evaluator estava encontrando 39px por algum motivo.*/
+
 .pixel {
   border: 1px solid black;
   background-color: white;
