--- a/style.css
+++ b/style.css
@@ -12,3 +12,15 @@
   height: 40px;
   margin: 5px;
 }
+
+#pixel-board {
+  margin: 20px 0px;
+  display: flex;
+}
+
+.pixel {
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  margin: 0px;
+}
