--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 #color-palette {
   display: table;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .color-palette-tr {
@@ -31,6 +33,7 @@
 
 #pixel-board {
   display: table;
+  margin-top: 20px;
 }
 
 .pixel-board-tr {
