--- a/style.css
+++ b/style.css
@@ -1,18 +1,31 @@
- table .color{
+ /* table .color{
     height: 40px;
     width: 40px;
-}
+} */
 
-td {
+
+.color {
     border: 1px solid black;
+    /* background-color: white; */
+    height: 20px;
+    width: 20px;
 }
-
-td .pixel {
-    height: 5px;
-    width: 5px;
+ 
+.pixel {
+    border: 1px solid black;
     background-color: white;
+    height: 50px;
+    width: 50px;
 }
 
-td #pixel-board{
+
+/* 
+.pixel {
+    height: 50px;
+    width: 50px;
+} */
+
+
+/* table #pixel-board{
    padding: 25px
-}
+} */
