--- a/style.css
+++ b/style.css
@@ -24,6 +24,13 @@ body {
   border: 1px solid black;
 }
 
+button {
+  display: block;
+  margin: 20px auto 0;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
 #pixel-board {
   padding-top: 40px;
   margin: auto;
