--- a/style.css
+++ b/style.css
@@ -12,12 +12,16 @@
 }
  
 .pixel {
-    border: 1px solid black;
+   
     background-color: white;
-    height: 50px;
-    width: 50px;
+    padding: 25px;
+    height: 40px;
+    width: 40px;
 }
 
+.pixel{
+    border: 1px solid black;
+}
 
 /* 
 .pixel {
