--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ h1 {
   text-align: center;
 }
 #color-palette {
-  border: 1px solid black;  
+  border: 1px solid black;
   margin-left: auto;
   margin-right: auto;
   width: 500px;
@@ -17,41 +17,36 @@ h1 {
   display: inline-block;
   width: 100px;
   height: 100px;
-  margin: 5px 0px 2px 16px;   
+  margin: 5px 0.5px 2px 16px;
 }
 
-.color:first-child  {
+.color:first-child {
   background-color: black;
 }
 
 .color:nth-child(2) {
-  background-color: aquamarine;
+  background-color:aquamarine;
 }
 
 .color:nth-child(3) {
-  background-color: rgb(207, 119, 36);
+  background-color:rgb(207, 119, 36);
 }
 
 .color:nth-child(4) {
-  background-color: rgb(107, 58, 199);
+  background-color:rgb(107, 58, 199);
 }
 
 .pixel {
+  background-color: white;
   border: 1px solid black;
-  width: 100px;
-  height: 100px;
+  width: 40px;
+  height: 40px;
 }
 
 table {
   margin-left: auto;
   margin-right: auto;
   border-collapse: collapse;
-  margin-top: 2px;
-  max-width: fit-content;
+  margin-top: 40px;  
 }
 
-/* #pixelRow {
-  border: 1px solid black;
-  width: 100px;
-  height: 100px;
-} */
