--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .color {
   display: inline-block;
   border: black solid 1px;
-  width: 100px;
-  height: 100px;
+  width: 40px;
+  height: 40px;
 }
 
 #black {
@@ -22,11 +22,11 @@
 }
 
 #pixel-board {
-  background-color: (255, 255, 255);
+  background-color: rgb(255, 255, 255);
 }
 
 .pixel {
   border: black solid 1px;
-  width: 100px;
-  height: 100px;
+  width: 40px;
+  height: 40px;
 }
