--- a/style.css
+++ b/style.css
@@ -39,14 +39,15 @@ h1 {
 .pixel {
   background-color: white;
   border: 1px solid black;
-  width: 40px;
-  height: 40px;
+  width: 38px;
+  height: 38px;
 }
 
 table {
   margin-left: auto;
   margin-right: auto;
   border-collapse: collapse;
-  margin-top: 40px;  
+  margin-top: 40px;
+  border: 1px solid black; 
 }
 
