--- a/style.css
+++ b/style.css
@@ -22,11 +22,12 @@
 
 .pixelLine {
   display: table-row;
+  margin: 5px;
 }
 
-.pixelColumn {
-  width: 40px;
-  height: 40px;
+.pixel {
+  width: 50px;
+  height: 50px;
   border: 1px solid black;
   display: table-cell;
 }
