--- a/style.css
+++ b/style.css
@@ -28,3 +28,12 @@ li:nth-child(4){
     background-color: pink;
     margin-left: 8px;
 }
+section{
+    margin-left: 44px;
+}
+.pixel{
+border: black solid 1px;
+width: 70px;
+height: 70px;
+display: inline-block;
+}
