Requisito 9 - Crie um botão que, ao ser clicado, limpa o quadro preenchendo a cor de todos seus pixels com branco.

--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
   background-color: black;
 }
 
+.cor_0 {
+  background-color: white;
+  border-width: 1px;
+  border-style: solid;
+  border-color: black;
+}
 .cor_1 {
   background-color: black;
   border-width: 1px;
