--- a/style.css
+++ b/style.css
@@ -10,3 +10,14 @@
   border: 1px solid;
   border-color: black;
 }
+
+#pixel-board {
+  display: inline-block;
+}
+
+.pixel {
+  width: 50px;
+  height: 50px;
+  background-color: white;
+}
+
