--- a/style.css
+++ b/style.css
@@ -36,11 +36,18 @@ h1 {
   background-color:rgb(107, 58, 199);
 }
 
+#btn-div{
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  margin-top: 40px;
+}
+
 .pixel {
   background-color: white;
   border: 1px solid black;
-  width: 38px;
-  height: 38px;
+  width: 41px;
+  height: 41px;
 }
 
 table {
