--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   width: 210px;
   height: 210px;
   margin-top: 20px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 
 }
 
@@ -25,6 +25,6 @@
   display: inline-block;
   width: 40px;
   height: 40px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
 
 }
