--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ td {
     height: 40px;  
 }
 
+td .pixel {
+    border: 1px solid black;
+    width: 40px;
+    height: 40px; 
+}
+
 #color-palette table {
     border-color: black 
 }
