--- a/style.css
+++ b/style.css
@@ -13,11 +13,14 @@
 
 #pixel-board {
   display: inline-block;
+  border-collapse: collapse;
 }
 
 .pixel {
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   background-color: white;
+  border-color: black;
+  border: 1px solid;
 }
 
