--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 
 .pixel {
     border: 1px solid black;
-    height: 40px;
-    width: 40px;
-    background-color: 'white';
+    width: 38px;
+    height: 38px;
+    background-color: white;
 }
