--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ td {
     height: 40px;  
 }
 
-td .pixel {
+td.pixel {
     border: 1px solid black;
     width: 40px;
     height: 40px; 
 }
 
 #color-palette table {
-    border-color: black 
+    border-color: black;
 }
 
 #pixel-board table {
