--- a/style.css
+++ b/style.css
@@ -20,3 +20,14 @@
 #green {
     background-color: green;
 }
+
+#pixel-board {
+    display: table;
+}
+
+.pixel {
+    height: 40px;
+    width: 40px;
+    border: solid 1px black;
+    display: inline-block;
+}
