--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   width: 40px;
   height: 40px;
   background-color: white;
-  border-color: black;
-  border: 1px solid;
+  border: 1px solid black;
+  padding: 0;
 }
 
