7 - Clicar em uma das cores da paleta faz com que ela seja selecionada e utilizada para preencher os pixels no quadro.

--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@
   margin: 0;
 }
 
-.input-colors {
+/* .input-colors {
   display: none;
-}
+} */
 
 #black , #second-color , #third-color , #fourth-color {
   display: inline-block;
