atualiza style lint

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #title {
-  margin: 15px 0px;
+  margin: 15px 0;
   text-align: center;
 }
 
@@ -19,10 +19,9 @@
   text-align: center;
 }
 
-
 #pixel-board {
   border: 1px solid black;
-  border-spacing: 0px;
+  border-spacing: 0;
   margin: 15px auto;
 }
 
