--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
   margin-left: 10px;
   border: 1px solid;
   border-color: black;
+  padding: 0;
 }
 
 #pixel-board {
@@ -17,8 +18,8 @@
 }
 
 .pixel {
-  width: 40px;
-  height: 40px;
+  width: 41px;
+  height: 41px;
   background-color: white;
   border: 1px solid black;
   padding: 0;
