--- a/style.css
+++ b/style.css
@@ -1,33 +1,33 @@
 * {
   padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
-	background-color: whitesmoke;
-	margin: 1% 3%;
+  background-color: whitesmoke;
+  margin: 1% 3%;
 }
 
 h1 {
   font-size: 40px;
-  font-family: "Courier New";
+  font-family: 'Courier New';
   letter-spacing: 0.5px;
   margin-bottom: 20px;
 }
 
 ul {
-	display: flex;
-	flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 li {
-	list-style: none;
-	background-color: black;
-	height: 50px;
-	width: 50px;
-	margin-right: 10px;
-	border: 1px solid black;
+  list-style: none;
+  background-color: black;
+  height: 50px;
+  width: 50px;
+  margin-right: 10px;
+  border: 1px solid black;
 }
 
 li:nth-child( 1 ) {
@@ -47,13 +47,13 @@ li:nth-child( 4 ) {
 }
 
 table {
-	margin-top: 20px;
-	margin-left: 0.5%;
-	display: table;
+  margin-top: 20px;
+  margin-left: 0.5%;
+  display: table;
 }
 
 tr {
-	display: table-row;
+  display: table-row;
 }
 
 td {
