--- a/style.css
+++ b/style.css
@@ -43,7 +43,9 @@
 .pixel {
   display: table-cell;
   border: 1px solid black;
+  max-height: 50px;
   height: 40px;
+  max-width: 50px;
   width: 40px;
   background-color: white;
 }
