--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+#color-palette {
+  padding: 60px;
+  width: 350px;
+}
+
 .color {
   border: 1px solid black;
   display: inline-block;
@@ -6,19 +11,31 @@
 }
 
 #black {
-  background-color:black
+  background-color:black;
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
 }
 
 #red {
   background-color:red;
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
 }
 
 #green {
   background-color: green;
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
 }
 
 #blue {
   background-color: blue;
+  width: 50px;
+  height: 50px;
+  margin-left: 10px;
 }
 
 .pixel {
@@ -26,4 +43,8 @@
   background-color: white;
   width: 40px;
   height: 40px;
+}
+
+.td {
+  display: table-row;
 }
