--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
 	border: solid;
 	border-width: 1px;
 	border-color: black;    
-	width:70px;
-	height:70px;
+	width:40px;
+	height:40px;
 	display: inline-block;
+	margin-left: 5px;
 }
 
 #black {
@@ -24,8 +25,8 @@
 }
 
 #pixel-board .pixel {
-	width: 60px;
-	height: 60px;
+	width: 40px;
+	height: 40px;
 	border: black solid 1px;
 	display: inline-block;
 }
