Adiciona resolução ao requisito 8

--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ body {
   background-color: black;
 }
 
+.selected {
+  display: table-cell;
+  padding: 25px;
+  width: 40px;
+  border: black solid 1px;
+  background-color: black;
+}
+
 #secondColor {
   background-color: aqua;
 }
@@ -41,7 +49,8 @@ body {
   border: black solid 1px;
   background-color: white;
 }
-#pixel-board{
-    padding-top: 100px;
-    padding-left: 560px;
+
+#pixel-board {
+  padding-top: 100px;
+  padding-left: 560px;
 }
