--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
   font-size: 40px;
-  font-family: 'Courier New';
+  font-family: 'Courier New', sans-serif;
   letter-spacing: 0.5px;
   margin-bottom: 20px;
 }
@@ -62,4 +62,27 @@ td {
   height: 40px;
   border: 1px solid black;
   background-color: white;
+}
+
+button {
+  margin-top: 10px;
+  margin-left: 10%;
+  width: 100px;
+  height: 30px;
+  background-color: rgb(213, 213, 213);
+  font-family: 'Courier New', sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  letter-spacing: 0.8px;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+button:hover {
+  box-shadow: 1px 1px 5px 1px rgba(0, 0, 0, 0.5);
+  transition: box-shadow 400ms;
+}
+
+button:focus {
+  outline: none;
 }
