ainda no requisito 5

--- a/style.css
+++ b/style.css
@@ -37,6 +37,6 @@ width: 70px;
 height: 70px;
 display: inline-block;
 background-color: white;
-font-size: 40px;
-border: black solid 1px
+font-size: 41px;
+border: 1px solid black 
 }
