--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1 {
 }
 
 .pixel {
-  background-color: white;
+  background-color: blue;
   border: 1px solid black;
   width: 41px;
   height: 41px;
