--- a/style.css
+++ b/style.css
@@ -1,25 +1,10 @@
 .color {
-  border: 1px solid black;
-  color: blue;
-  margin: 2px;
-  padding : 20px;
+  
+  margin: 1%;
+  padding : 5%;
+} 
+
+#black {
+  background-color: black;
 }
-
-#blue {
-  background-color: blue;
-}
-#red {
-  background-color: red;
-}
-#pink {
-  background-color: pink;
-}
-#green {
-  background-color: green;
-}
-
-
-
-
-
 
