--- a/style.css
+++ b/style.css
@@ -1,50 +1,28 @@
 #color-palette {
-  padding: 60px;
-  width: 350px;
+  display: flex;
+  flex-wrap: wrap;
+  width: 168px;
 }
 
 .color {
   border: 1px solid black;
-  display: inline-block;
-  width: 40px;
   height: 40px;
-}
-
-#black {
-  background-color:black;
-  width: 50px;
-  height: 50px;
-  margin-left: 10px;
-}
-
-#red {
-  background-color:red;
-  width: 50px;
-  height: 50px;
-  margin-left: 10px;
-}
-
-#green {
-  background-color: green;
-  width: 50px;
-  height: 50px;
-  margin-left: 10px;
-}
-
-#blue {
-  background-color: blue;
-  width: 50px;
-  height: 50px;
-  margin-left: 10px;
+  width: 40px;
+  display: inline-block;
 }
 
 .pixel {
   border: 1px solid black;
-  background-color: white;
-  width: 40px;
   height: 40px;
+  width: 40px;
+  display: inline-block;
+  background-color: white;
 }
 
-.td {
-  display: table-row;
+#pixel-board {
+  display: flex;
+  flex-wrap: wrap;
+  width: 210px;
+  height: 210px;
+  margin-top: 10px;
 }
