--- a/style.css
+++ b/style.css
@@ -5,18 +5,14 @@
 
 #pixel-board {
   width: 210px;
-  border: 1px solid;
-}
-
-.row-pixel:not( :last-child ) {
-  border-bottom: 1px solid;
+  border: 1px solid rgb(0, 0, 0);
 }
 
 .pixel , .color {
   display: inline-block;
   width: 40px;
   height: 40px;
-  border: 1px solid;
+  border: 1px solid rgb(0, 0, 0);
 }
 
 .color {
