--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@ ul{
 
 li{
 border: black solid 1px;
-width: 70px;
-height: 70px;
+width: 60px;
+height: 60px;
 
 }
 li:nth-child(1){
@@ -37,6 +37,7 @@ width: 41px;
 height: 41px;
 display: inline-block;
 background-color: white;
-
+padding: 0px;
+border-spacing: 0px;
 border: 1px solid black 
 }
