--- a/style.css
+++ b/style.css
@@ -11,6 +11,36 @@
   background-color: black;
 }
 
+#delimiter {
+  display: inline-block;
+}
+#conteudo {
+  display: block;
+}
+#delimiter section {
+  display: inline-block;
+}
+#board-size {
+  width: 80px;
+  margin-left: 30px;
+}
+
+#color-palette {
+  margin-bottom: 05px;
+}
+
+#clear-board {
+  margin-left: 6px;
+}
+
+#pixel-board{
+  margin-top: 10px;
+}
+
+#generate-board {
+  margin-left: 5px;
+}
+
 .cor_0 {
   background-color: white;
   border-width: 1px;
