8 - Clicar em um pixel dentro do quadro após selecionar uma cor na paleta faz com que o pixel seja preenchido com a cor selecionada.

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   display: none;
 } */
 
-#black , #second-color , #third-color , #fourth-color {
+#primary-color , #second-color , #third-color , #fourth-color {
   display: inline-block;
   width: 40px;
   height: 40px;
@@ -21,7 +21,7 @@
   border: solid 1px black;
 }
 
-#black {
+#primary-color {
   background-color: black;
 }
 
