--- a/style.css
+++ b/style.css
@@ -1,14 +1,26 @@
 .color {
   display: inline-block;
   border: 1px solid black;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   margin: 10px;
 }
 
+ul {
+  list-style: none;
+}
+
+.line {
+  display: inline-block;
+}
+
+#pixel-board { 
+  display: inline-block;
+  font-size: 0;
+}
 
 .pixel {
   border: 1px solid black;
-  width: 25px;
-  height: 25px;
+  width: 40px;
+  height: 40px;
 }
