--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     border: 1px solid black;
     display: inline-block;
     margin-top: 1px;    
-    background-color: red;
+    background-color: white;
 }
 
 #clear-board{
@@ -29,6 +29,3 @@
     font-size: 6px;
 }
 
-#color-palette{
-    margin-right: 50px;
-}
