tentando resolver ex 6

--- a/style.css
+++ b/style.css
@@ -16,18 +16,16 @@
 
   }
   
-  .caixa2 {
-    display: inline-table;
-    border: 1px solid black;
-    height: 40px;
-    width: 40px;
-  }
   .colorpixel {
       background-color: white;
   }
 
   #firstbox {
     background-color: black;
+    
+  }
+  .selected {
+    color: black;
   }
   #secondbox {
     background-color:red;
