--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 .color {
   border: 1px solid black;
-  color: blue;
   margin: 2px;
-  padding : 20px;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
 }
 
 .pixel{
   background-color:white;
-  padding : 20px;
-  border: 1px solid black
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
 }
 
 #black {
@@ -50,7 +53,7 @@
 
 
 
-.flexy {
+/* .flexy {
   display: flex;
   flex-wrap: wrap;
   font-size: 20px;
@@ -76,4 +79,4 @@
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
