--- a/style.css
+++ b/style.css
@@ -6,6 +6,14 @@
   display: inline-block;
 }
 
+.pixel {
+  background-color: white;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+}
+
 #black {
   background-color: black;
 }
