--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-
-#color-palette {
-
-}
 .color {
   display: inline-block;
   width: 40px;
@@ -20,7 +16,7 @@
 #yellow {
   background-color: yellow;
 }
-.white {
+#white {
   background-color: white;
 }
 #pixel-board {
@@ -35,3 +31,4 @@
   height: 40px;
   border: solid 1px black;
 }
+
