Em index.html: adiciona link para arquivo script.js; adiciona section com id "pixel-board". Em style.css: para id "pixel-board", retirada de border e padding, centralização e auto-ajuste ao conteúdo; para classe "pixel-row", retirada de margin, border, padding, display flex, centralização e auto-ajuste ao conteúdo; para classe "pixel", retirada de padding, ajuste de width e height para 40px, alteração de background-color para white, display inline-block e border de 1px solid black. Em script.js, a function createPixel cria e retorna uma div com classe "pixel"; a function generateBoard recebe width e height e constrói um board de pixels; a function window.onload executa uma function anônima para definir valores iniciais para boardSize, width, height e gerar o board de pixels.

--- a/style.css
+++ b/style.css
@@ -44,3 +44,32 @@ body , main {
 #green {
   background-color: green;
 }
+
+#pixel-board {
+  margin: 10px auto;
+  border: 0;
+  padding: 0;
+  width: fit-content;
+  height: fit-content;
+  justify-content: center;
+}
+
+.pixel-row {
+  margin: 0;
+  border: 0;
+  padding: 0;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+}
+
+.pixel {
+  margin: 0 auto;
+  border: 1px solid black;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  display: inline-block;
+}
