centralize elements revert

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-#pixel-board {
-  margin: auto;
+#color-palette {
+  padding: 60px;
+  width: 350px;
 }
 
 #title {
@@ -41,8 +42,8 @@
 }
 
 .container {
-  width: 50%;
-  border: 7px dotted rgb(0, 0, 0);
+  width: 70%;
+  border: 7px dotted rgb(0, 191, 255);
   margin: auto;
   text-align: center;
   padding: 10px;
