--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body {
 }
 
-.color {
+#pixel-board {
+  width: 210px;
+}
+
+.color, .pixel {
   border: 1px solid black;
     width: 40px;
     height: 40px;
@@ -9,9 +13,6 @@ body {
 }
 
 .pixel {
-  width: 40px;
-  height: 40px;
-  border: 1px solid black;
   border-spacing: 0;
   padding: 0;
 }
