refatorando tudo - 4 e 5 consertada

--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@ body {
   width: 210px;
 }
 
+#pixel-board {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .color, .pixel {
   border: 1px solid black;
     width: 40px;
