--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 body {
-  text-align: center;
+  text-align:center;
   font-family: sans-serif;
 }
 
 .color {
   border: 1px solid black;
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   border-top-left-radius: 20px;
   border-bottom-right-radius: 20px;
-  margin: 10px;
+  margin: 1px;
+  margin-bottom: 10px;
   display: inline-block;
 }
 
@@ -34,7 +35,7 @@ body {
     border-top-left-radius: 20px;
     border-bottom-right-radius: 20px;
     background-color: white;
-    width: 67px;
-    height: 67px;
+    width: 40px;
+    height: 40px;
     display: inline-block;
 }
