--- a/style.css
+++ b/style.css
@@ -47,3 +47,14 @@ h1 {
   display: inline-block;
   margin: 10px;
 }
+
+#div-botao {
+  text-align: center;
+  padding-top: 20px;
+}
+
+#clear-board {
+  text-align: center;
+  width: 200px;
+
+}
