--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
   font-size: 40px;
-  font-family: 'Courier New', sans-serif;
+  font-family: Courier New;
   letter-spacing: 0.5px;
   margin-bottom: 20px;
 }
@@ -34,18 +34,6 @@ li:nth-child( 1 ) {
   background-color: black;
 }
 
-li:nth-child( 2 ) {
-  background-color: rgb(233, 21, 21);
-}
-
-li:nth-child( 3 ) {
-  background-color: rgb(30, 30, 245);
-}
-
-li:nth-child( 4 ) {
-  background-color: rgb(2, 143, 2);
-}
-
 table {
   margin-top: 20px;
   margin-left: 0.5%;
@@ -66,11 +54,10 @@ td {
 
 button {
   margin-top: 10px;
-  margin-left: 10%;
   width: 100px;
   height: 30px;
   background-color: rgb(213, 213, 213);
-  font-family: 'Courier New', sans-serif;
+  font-family: Courier New;
   font-weight: 600;
   font-size: 16px;
   letter-spacing: 0.8px;
@@ -83,6 +70,16 @@ button:hover {
   transition: box-shadow 400ms;
 }
 
-button:focus {
+button:focus,
+input:focus {
   outline: none;
+}
+
+input {
+  width: 110px;
+  height: 30px;
+  font-size: 16px;
+  font-weight: bold;
+  font-family: 'Courier New', Courier, monospace;
+  padding-left: 5px;
 }
