--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ li:nth-child(4){
     background-color: pink;
     margin-left: 8px;
 }
-section{
+table{
     margin-left: 44px;
 }
 .pixel{
@@ -37,7 +37,6 @@ width: 41px;
 height: 41px;
 display: inline-block;
 background-color: white;
-padding: 0px;
-border-spacing: 0px;
+
 border: 1px solid black 
 }
