added white background to pixel class on css file

--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ background-color: yellow;
     height: 40px;
     width: 40px;
     display: inline-block;
+    background-color: white;
 }
 
 .jellyRows {
