--- a/style.css
+++ b/style.css
@@ -20,3 +20,23 @@
 #fourth-color {
   background-color: green;
 }
+
+.tr {
+  display: table-row;
+  border: 1px solid black;
+  height: 40px;
+  width: 40px;
+}
+
+.td {
+  display: table-cell;
+  border: 1px solid black;
+  height: 40px;
+  width: 40px;
+}
+
+.pixel {
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+}
