--- a/style.css
+++ b/style.css
@@ -3,8 +3,21 @@
   width: 80px;
   height: 40px;
   display: inline-block;
+  
+  
 
 }
 ul{
-  padding-inline-start: 0px;
+ padding-inline-start: 0px;
+
+}
+.pixel{
+  display: table-cell;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+}
+#pixel-board {
+  display: table;
 }
