--- a/style.css
+++ b/style.css
@@ -8,14 +8,15 @@
   margin: 5px;
 }
 #pixels-board {
-  display: inline-block;
+  max-width: 300px;
 }
 .pixel {
   border-width: 1px;
   border-color: black;
   border-style: solid;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   margin: 0px;
   background-color: white;
+  display: inline-block;
 }
