--- a/style.css
+++ b/style.css
@@ -6,16 +6,8 @@
   margin: 10px;
 }
 
-ul {
-  list-style: none;
-}
-
-.line {
-  display: inline-block;
-}
-
 #pixel-board { 
-  display: inline-block;
+  max-width: 250px;
   font-size: 0;
 }
 
@@ -23,4 +15,7 @@ ul {
   width: 40px;
   height: 40px;
   border: 1px solid black;
+  background-color: white;
+  margin: 0;
+  display: inline-block;
 }
