--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .title {
@@ -7,7 +9,7 @@ body {
 }
 
 .color-palette {
- 
+  
 }
 
 .color {
