--- a/style.css
+++ b/style.css
@@ -19,11 +19,12 @@ body {
   height: 40px;
   margin: 2px;
   border: 1px solid black;
+  cursor: pointer;
 }
 
 #pixel-board {
   margin: 0 auto;
-  margin-top: 50px;
+  padding-top: 50px;
   text-align: center;
 }
 
@@ -37,4 +38,5 @@ body {
   height: 40px;
   border: 1px solid black;
   background-color: white;
+  cursor: pointer;
 }
