--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ button{
 
 .pixel{
     border: 1px solid black;
-    width: 37px;
-    height: 37px;
+    width: 40px;
+    height: 40px;
+    background-color: white;
 }
