--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@
 
 #pixel-board {
   width: 210px;
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid black;
 }
 
 .pixel , .color {
   display: inline-block;
   width: 40px;
   height: 40px;
-  border: 1px solid rgb(0, 0, 0);
+  border: 1px solid black;
 }
 
 .color {
