--- a/style.css
+++ b/style.css
@@ -2,22 +2,21 @@
   border: 1px black solid;
   width: 80px;
   height: 40px;
-  display: inline-block;
-  
-  
-
+  display: inline-block; 
 }
 ul{
  padding-inline-start: 0px;
 
 }
 .pixel{
-  display: table-cell;
   border: 1px solid black;
-  width: 40px;
   height: 40px;
+  width: 40px;
+  display: inline-block;
   background-color: white;
 }
 #pixel-board {
-  display: table;
+  display: table-cell;
+  width: 220px;
+  height: 120px;  
 }
