--- a/style.css
+++ b/style.css
@@ -70,8 +70,7 @@ button:hover {
   transition: box-shadow 400ms;
 }
 
-button:focus,
-input:focus {
+button:focus{
   outline: none;
 }
 
@@ -79,7 +78,11 @@ input {
   width: 110px;
   height: 30px;
   font-size: 16px;
-  font-weight: bold;
+  font-weight: 600;
   font-family: 'Courier New', Courier, monospace;
   padding-left: 5px;
+}
+
+input:focus {
+  outline: none;
 }
