--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 table {
   margin: 0px;
 }
+
 .color {
-  border: 1px solid black);
+  border: 1px solid black;
   width: 40px;
   height: 40px;
 }
+
 .black {
   background-color: black;
 }
