--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   margin: auto;
+  max-width: 1366px;
+  max-height: 768px;
   width: 90%;
   text-align: center;
 }
@@ -38,10 +40,12 @@ body {
 
 .tr {
   display: table-row;
+  margin: auto;
 }
 
 .td {
   display: table-cell;
+  margin: auto;
 }
 
 .pixel {
@@ -51,17 +55,20 @@ body {
   background-color: white;
 }
 
-.pixel .black:hover {
+/*
+.black:hover {
   background-color: black;
 }
 
-/* .pixel .red:hover {
+.red:hover {
   background-color: red;
 }
-.pixel .blue:hover {
+
+.blue:hover {
   background-color: blue;
 }
-.pixel .green:hover {
+
+.green:hover {
   background-color: green;
 }
 
