--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(37, 114, 177);
+}
+
+#title {
+    color: white;
+}
+
 .color {
     border: 1px solid black;
     width: 40px;
     height: 40px;
+    border-radius: 50%;
 }
 
 .pixel {
@@ -12,4 +25,6 @@
 
 #clear-board {
     margin-bottom: 10px;
+    margin-top: 10px;
 }
+
