--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@ td {
     height: 40px;  
 }
 
-.pixel {
+/* .pixel {
     border: 1px solid black;
     width: 40px;
     height: 40px; 
-}
+} */
 
 #color-palette table {
     border-color: black;
