--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #color-pallete {
-
+display: flex;
 }
 
 .color {
@@ -18,11 +18,11 @@ background-color: red;
 }
 
 #three {
-background-color: green;    
+background-color: green;
 }
 
 #four {
-background-color: yellow;    
+background-color: yellow;
 }
 
 .pixel {
@@ -36,8 +36,14 @@ background-color: yellow;
 .jellyRows {
     display: inline-block;
     border-spacing: 0;
+    border-collapse: collapse;
 }
 
 #button {
-    display:flexbox;
+  display:flexbox;
+}
+
+td, tr {
+  border-collapse: collapse;
+  border-spacing: 0;
 }
