Adicionado  ajustes no Desafio 5

--- a/style.css
+++ b/style.css
@@ -7,20 +7,20 @@ td {
     height: 40px;  
 }
 
-/* .pixel {
+td .pixel {
     border: 1px solid black;
     width: 40px;
     height: 40px; 
-} */
+}
 
 #color-palette table {
     border-color: black;
 }
 
-#pixel-board table {
+/* #pixel-board table {
    border-color: black;
    border-collapse: collapse;
-}
+} */
 
 #title {
     margin: 5px;
