--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   background-color: white;
 }
 #pixel-board {
-  display: table; 
+  display: table;
 }
 .line{ 
   display: table-row;
@@ -30,5 +30,6 @@
   width: 40px;
   height: 40px;
   border: solid 1px black;
+  margin-left: 700px;
 }
 
