--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
 
 .palette-table div div {
   display: table-cell;
-  padding: 5px;
-  border: solid 1px #000;
+  padding: 15px;
+  border: solid 1px black;
+}
+
+#pixel-board {
+  background-color: white;
 }
