Adicionado  ajustes no Desafio 5

--- a/style.css
+++ b/style.css
@@ -7,20 +7,19 @@ td {
     height: 40px;  
 }
 
-td .pixel {
+/* td .pixel {
     border: 1px solid black;
     width: 40px;
     height: 40px; 
-}
-
-#color-palette table {
-    border-color: black;
-}
-
-/* #pixel-board table {
-   border-color: black;
-   border-collapse: collapse;
 } */
+
+/* #color-palette table {
+    border-color: black;
+} */
+
+#pixel-board table {
+   border-collapse: collapse;
+}
 
 #title {
     margin: 5px;
