--- a/style.css
+++ b/style.css
@@ -13,5 +13,21 @@
 }
 
 #pixel-board {
+  display: table;
   background-color: white;
+}
+
+.pixel {
+  width: 40px;
+  height: 40px;
+  background-color: white;
+  border: solid 1px black;
+}
+
+.tr {
+  display: table-row;
+}
+
+.td {
+  display: table-cell;
 }
