--- a/style.css
+++ b/style.css
@@ -21,6 +21,11 @@
   background-color: green;
 }
 
+#pixel-board {
+  width: 210px;
+  height: 210px;
+}
+
 .tr {
   display: table-row;
   border: 1px solid black;
@@ -39,4 +44,5 @@
   width: 40px;
   height: 40px;
   border: 1px solid black;
+  background-color: white;
 }
