--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ button{
 }
 
 #pixel-board{
-   border-collapse: collapse;
+   /* border-collapse: collapse; */
 }
 
 .pixel{
@@ -38,6 +38,4 @@ button{
     width: 40px;
     height: 40px;
     background-color: white;
-    padding: 0;
-    margin: 0;
 }
