--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@
 }
 .pixel{
     border: 1px solid black;
-    width: 38px;
-    height: 38px;
+    width: 40px;
+    height: 40px;
+    box-sizing: border-box;
     display: inline-block;
     
 }
