--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 
 #pixel-board {
   width: 210px;
-  border: 1px solid black;
+
+  /* border: 1px solid black; */
 }
 
 .pixel , .color {
@@ -13,6 +14,10 @@
   width: 40px;
   height: 40px;
   border: 1px solid black;
+}
+
+.pixel {
+  background-color: white;
 }
 
 .color {
