--- a/style.css
+++ b/style.css
@@ -7,6 +7,18 @@ body {
   background-color: rgb(205, 209, 212);
 }
 
+
+
+header, #color-palette, #painelControle, #pixel-board {
+  width: 70%;  
+  margin: auto;
+  margin-bottom: 15px;
+}
+
+input, button {
+  margin: 5px;
+}
+
 .color {
   border: 1px solid black;
   width: 40px;
@@ -20,7 +32,7 @@ body {
   background-color: white;
 }
 
-#clear-board {
+#clear-board, #generate-board {
   background-color: white;
   padding: 5px;
 }
