--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  background-color: red;
+}
+
 table.color-palette {
   margin-bottom: 10px;
 }
@@ -8,9 +12,12 @@ td.color {
   height: 40px;
 }
 
-td.pixel {
+.pixel {
   border: 1px solid black;
   width: 40px;
   height: 40px;
-  background-color: "white";
+}
+
+tr {
+  background-color: rgb(255, 255, 255);
 }
