--- a/style.css
+++ b/style.css
@@ -28,12 +28,10 @@
 
 .pixel{
   display: table-cell;
-  /* background-color: white; */
+  background-color: white;
   width: 40px;
   height: 40px;
   border: 1px solid black;
 }
 
-/* #box1 {
-  /* background-color: green; */
-} */
+
