--- a/style.css
+++ b/style.css
@@ -1,23 +1,14 @@
-body {
-  background-color: red;
-}
-
-table.color-palette {
-  margin-bottom: 10px;
-}
-
-td.color {
+.color {
+  display: inline-block;
   border: 1px solid black;
   width: 40px;
   height: 40px;
 }
 
 .pixel {
+  display: inline-block;
   border: 1px solid black;
   width: 40px;
   height: 40px;
-}
-
-tr {
   background-color: rgb(255, 255, 255);
 }
