--- a/style.css
+++ b/style.css
@@ -1,47 +1,44 @@
-/* h1 {
-    text-align: center;
-}
-
+h1 {
+  text-align: center;
+ }
+  
 #color-palette {
-    margin: auto; 
-    margin-top: 60px;
-    background-color: aqua;
-}
+  margin: auto;
+  margin-top: 60px;
+  background-color: aqua;
+ }
 
 .color {
-    border: 1px solid black;
-    width: 40px;
-    height: 40px;
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
 }
-
+  
 #botão {
-    margin-top: 20px;
-    background-color: aquamarine;
+  margin-top: 20px;
+  background-color: aquamarine;
 }
-
+  
 #clear-board {
-    border-radius: 5px;
-    background-color: #C4C4BA;
-    display: block;
-    margin: auto;
-    width: 100px;
-    height: 30px;
-    color: #1f743c;
+  border-radius: 5px;
+  background-color: #C4C4BA;
+  display: block;
+  margin: auto;
+  width: 100px;
+  height: 30px;
+  color: #1f743c;
 }
-
+  
 #pixel-board {
-    margin: auto; 
-    margin-top: 20px;
-    background-color: aqua;
-}
-
+  margin: auto;
+  margin-top: 20px;
+  background-color: red;
+ }
+  
 .pixel {
-    border: 1px solid black;
-    width: 40px;
-    height: 40px;
-}
-
- */
-
-
-
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  background-color: white;
+} 
+ 
