--- a/style.css
+++ b/style.css
@@ -36,3 +36,12 @@
   display: inline-block;
   margin: 2.5px;
 }
+
+.pixel {
+  border: black solid 1px;
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  background-color: white;
+  border: 1px solid black 
+} 
