--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #color-palette {
   width: 400px;
-  height: 400px;
+  height: 101px;
   border: 1px solid #c3c3c3;
   display: flex;
   flex-direction: row-reverse;
@@ -8,8 +8,8 @@
 
 #color-palette div {
   width: 100px;
-  height: 100px;
-  float: left;
+  height: 99px;
+  display: inline-block;
   border: 1px solid black;
 }
 .color {
@@ -25,6 +25,18 @@
 #red {
   background-color: red;
 }
-#green{
+#green {
   background-color: green;
+}
+#pixel-board {
+  width: 400px;
+  height: 400px;
+  border: 1px solid #c3c3c3;
+  display: flex;
+}
+.pixel {
+  width: 100px;
+  height: 99px;
+  float: left;
+  border: 1px solid black;
 }
